Adjust margin and add sorting for tenant statuses
Reduce the margin in multiple Vue components to 8px and add a sortOrder field to TenantStatusEnum, along with sorting functionality in TenantService.